Add default translations

--- a/selene-i18n/src/main/resources/selene/translations_en.properties
+++ b/selene-i18n/src/main/resources/selene/translations_en.properties
@@ -15,4 +15,53 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-demo=hello world!
+selene.selene.info.modules=$2Modules$3:
+selene.selene.info.authors=$2Authors$3: $1{0}
+selene.reload.all=$1Successfully reloaded all modules
+selene.selene.reload.single.fail=$4Failed to reload '{0}'
+selene.info.header=$2Selene $3($1Version$3: $1{0}$3)
+selene.selene.info.module.row=$3 - $1{0} $3- $2{1}
+selene.info.module.unknown=$4Could not find module with ID '{0}'
+selene.i18n.lang.updated=$1Your preferred language has been switched to: $2{0}
+selene.i18n.lang.updated.other=$1The language preference for $2{0} $1has been switched to: $2{1}
+selene.selene.reload.single=$1Successfully reloaded '$2{0}$1'
+selene.info.parameter.missing=$4Missing value for argument '{0}'
+selene.confirm.invalid.id=$4Could not confirm command: Invalid runner ID
+selene.selene.info.module.hover=$2Details for '$1{0}$2'
+selene.confirm.invalid.other=$4Could not confirm command
+selene.confirm.invalid.source=$4This command can only be used by identifiable sources (players, console) matching the original source of the command
+selene.pagination.title=$1Selene Server Info
+toolbinding.toolbinding.caught.block=Tool cannot be bound to blocks
+toolbinding.toolbinding.caught.hand=Tool cannot be bound to hand
+toolbinding.toolbinding.caught.duplicate=There is already a tool bound to this item
+oldplots.oldplots.list.title=$1OldPlots for $2{0}
+oldplots.oldplots.caught.worlds=$4Worlds are not stored as OldPlots
+oldplots.oldplots.caught.location=$4No world location configured for '{0}'
+oldplots.oldplots.caught.plot=$4No plot with that ID found
+oldplots.oldplots.caught.player=$4No valid player provided
+oldplots.oldplots.list.single=$3 - $1{0}$2, $1{1}, {2}
+oldplots.oldplots.caught.calculation=$4Could not calculate plot location
+oldplots.oldplots.list.hover=$2Teleport to $1{0}$2, $1{1}, {2}
+command.caught=Sorry, I could not start that command. Please report this in our support channel.
+command.not.permitted=You are not permitted to use that command!
+command.unknown=Sorry, I don't know what to do with that command!
+playeractions.playeractions.rootworld=$4You are not permitted to move in this world
+playeractions.playeractions.plot.outside=$4You are outside a plot
+playeractions.playeractions.plot.denied=$4You are denied from the plot you are teleporting to
+playeractions.playeractions.plot.interact=$4You do not have permission to interact with entities here
+playeractions.playeractions.spectator.notallowed=$4You are not allowed to teleport while in spectator mode
+dave.reload=$1Reloaded Dave without breaking stuff, whoo!
+dave.trigger.single=$3 - $1{0}
+dave.mute=$4Muted Dave, note that important triggers will always show
+dave.discord.format=**Dave** ≫ {0}
+dave.unmute=$1Unmuted Dave
+dave.trigger.header=$1Triggers
+dave.trigger.notfound=$4No trigger with id '{0}' exists.
+dave.suggestion.link.hover=$2Click to open $1{0}
+dave.trigger.single.hover=$1Click to perform trigger
+dave.suggestion.link=Here's a useful link, $1{0}
+worldmanagement.worldmanagement.unloader.blacklist.added=$2{0} $1was added to the blacklist and will not be unloaded
+worldmanagement.worldmanagement.unloader.blacklist.failed=$2{0} $1could not be blacklisted, are you sure it exists?
+commandparameters.selene.command.missing_converter=Parameter of type {0} has no register converter
+commandparameters.selene.command.hashtag.wrong_format=Pattern has to be formatted as #type[arg1][arg2][etc.]
+commandparameters.selene.command.missing_args=Not enough arguments.
