Add Dutch translations

--- a/selene-i18n/src/main/resources/selene/translations_en.properties
+++ b/selene-i18n/src/main/resources/selene/translations_en.properties
@@ -47,7 +47,7 @@ minecraft.enchant.fortune=Fortune
 minecraft.enchant.silktouch=Silk Touch
 selene.exception=$4{0}
 prefix=$3[] $1
-caught=$4An caught occurred. $3{0}
+caught=$4An error occurred. $3{0}
 source.unknown=Unknown
 caught.reference.lost=$4Reference to object lost
 caught.failedbinding=$4Cannot apply to this type
