Minor message updates

--- a/selene-i18n/src/main/resources/selene/translations_en.properties
+++ b/selene-i18n/src/main/resources/selene/translations_en.properties
@@ -89,7 +89,7 @@ selene.reload.single.fail=$4Failed to reload '{0}'
 selene.reload.all=$1Successfully reloaded all modules
 hashtag.wrong_format=Pattern has to be formatted as #type[arg1][arg2][etc.]
 missing_args=Not enough arguments.
-missing_converter=Parameter of type {0} has no register converter
+missing_converter=Parameter of type {0} has no registered converter
 toolbinding.caught.duplicate=There is already a tool bound to this item
 toolbinding.caught.block=Tool cannot be bound to blocks
 toolbinding.caught.hand=Tool cannot be bound to hand
