Remove default values and fix minor formatting

--- a/selene-i18n/src/main/resources/selene/translations_fr.properties
+++ b/selene-i18n/src/main/resources/selene/translations_fr.properties
@@ -45,8 +45,6 @@ minecraft.enchant.punch=Frappe
 minecraft.enchant.frostwalker=Semelles givrantes
 minecraft.enchant.fortune=Fortune
 minecraft.enchant.silktouch=Toucher de soie
-selene.exception=$4{0}
-prefix=$3[] $1
 caught=$4une erreur s'est produite. $3{0}
 source.unknown=Inconnue
 caught.reference.lost=$4Référence d'objet perdue
@@ -54,7 +52,6 @@ caught.failedbinding=$4Ne peut s'appliquer à ce genre
 source.none=Aucun
 oldplots.caught.calculation=$4Impossible de calculer l'emplacement du plot
 oldplots.list.hover=$2Téléportation vers $1{0}$2, $1{1}, {2}
-oldplots.list.single=$3 - $1{0}$2, $1{1}, {2}
 oldplots.caught.plot=$4Aucun plot avec cet ID n'a été trouvé
 oldplots.caught.worlds=$4Les mondes ne sont pas stockés en tant qu’anciens plots
 oldplots.caught.player=$4Le nom de joueur fourni n'est pas valide
@@ -67,7 +64,6 @@ dave.suggestion.link=Voici un lien utile, $1{0}
 dave.unmute=$1Dave est réactivé
 dave.reload=$1Hourra,Dave a rechargé sans erreur !
 dave.trigger.header=$1Déclencheurs
-dave.discord.format=**Dave** â‰« {0}
 dave.mute=$4Dave est maintenant muet, notez que les déclencheurs importants s'afficheront toujours
 dave.trigger.single=$3 - $1{0}
 selene.reload.single=$1Rechargé avec succès '$2{0}$1'
@@ -77,13 +73,8 @@ selene.confirm.invalid.id=$4Impossible de confirmer la commande: Aucune trace de
 i18n.lang.updated=$1Votre langue de préférence à été mise à jour par: $2{0}
 selene.confirm.invalid.other=$4Impossible de confirmer la commande
 selene.info.module.hover=$2Détails pour '$1{0}$2'
-selene.confirm.invalid.source=$4Cette commande ne peut être utilisée que par des sources identifiables
-(lecteurs,consoles) qui correspondent à la source d'origine
+selene.confirm.invalid.source=$4Cette commande ne peut être utilisée que par des sources identifiables (lecteurs, consoles) qui correspondent à la source d'origine
 selene.info.parameter.missing=$4Valeur manquante pour l'argument '{0}'
-selene.pagination.title=$1Selene Server Info
-selene.info.authors=$2Authors$3: $1{0}
-selene.info.modules=$2Modules$3:
-selene.info.header=$2Selene $3($1Version$3: $1{0}$3)
 selene.invalid.source=$4Cette commande ne peut être utilisée que par les joueurs
 selene.info.module.row=$3 - $1{0} $3- $2{1}
 selene.reload.single.fail=$4Échec du rechargement '{0}'
@@ -94,8 +85,7 @@ missing_converter=Paramètre de type {0} n'a pas de convertisseur enregistré
 toolbinding.caught.duplicate=Un outil lié à cet élément existe déjà
 toolbinding.caught.block=L'outil ne peut être lié à des blocs
 toolbinding.caught.hand=L'outil ne peut être lié à la main
-worldmanagement.unloader.blacklist.failed=$2{0} $1N'a pas pu petre mis sur liste noir, êtes-vous sûr de son
-existence ?
+worldmanagement.unloader.blacklist.failed=$2{0} $1N'a pas pu petre mis sur liste noir, êtes-vous sûr de son existence?
 worldmanagement.unloader.blacklist.added=$2{0} $1a été ajouté à la liste noire et ne sera pas déchargé
 playeractions.spectator.notallowed=$4Vous n'êtes pas autorisé à vous téléporter en mode spectateur
 playeractions.plot.denied=$4L'accès au plot auquel vous tentez de vous téléporter vous est refusé
@@ -104,7 +94,6 @@ playeractions.plot.outside=$4Vous êtes en dehors d'un plot
 playeractions.rootworld=$4Vous n'avez pas la permission de vous déplacer dans ce monde
 discord.command.not.permitted=Vous n'avez pas la permission d'utiliser cette commande !
 discord.command.unknown=Désolé, je ne sais que faire de cette commande
-discord.command.caught=Sorry, I could not start that command. Please report this in our support channel.
 caught.command.missingargs=$4Cette commande nécessite des arguments
 confirm.message.hover=$1Confirmer l'exécution de cette commande
 confirm.message=$1Cette commande nécessite une confirmation, cliquez $2[ici] $1pour confirmer
