#250 Add login language notification

--- a/selene-i18n/src/main/resources/selene/translations_en.properties
+++ b/selene-i18n/src/main/resources/selene/translations_en.properties
@@ -106,3 +106,5 @@ discord.command.caught=Sorry, I could not start that command. Please report this
 caught.command.missingargs=$4The command requires arguments
 confirm.message.hover=$1Confirm running command
 confirm.message=$1This command requires confirmation, click $2[here] $1to confirm
+playeractions.lang.notify=$1Hi there! We detected you prefer to see messages in {0}, if you would like our commands to send you messages in {0} click on this message to change your language preference.
+playeractions.lang.notify.hover=$1Click here to change your language preference to $2{0}
