#289 Add Finnish translations (batch 04062021)

--- a/hartshorn-i18n/src/main/resources/selene/translations_fi.properties
+++ b/hartshorn-i18n/src/main/resources/selene/translations_fi.properties
@@ -15,103 +15,102 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-minecraft.enchant.infinity=Infinity
-minecraft.enchant.protection.projectile=Projectile Protection
-minecraft.enchant.knockback=Knockback
-minecraft.enchant.protection.fire=Fire Protection
-minecraft.enchant.depthstrider=Depth Strider
-minecraft.enchant.aquaaffinity=Aqua Affinity
-minecraft.enchant.featherfalling=Feather Falling
-minecraft.enchant.sealuck=Luck Of The Sea
-minecraft.enchant.protection.blast=Blast Protection
-minecraft.enchant.baneofarthopods=Bane Of Arthropods
-minecraft.enchant.binding=Binding Curse
-minecraft.enchant.fireaspect=Fire Aspect
-minecraft.enchant.vanishing=Vanishing Curse
-minecraft.enchant.protection=Protection
-minecraft.enchant.lure=Lure
-minecraft.enchant.mending=Mending
-minecraft.enchant.respiration=Respiration
-minecraft.enchant.smite=Smite
-minecraft.enchant.looting=Looting
-minecraft.enchant.sharpness=Sharpness
-minecraft.enchant.thorns=Thorns
-minecraft.enchant.flame=Flame
-minecraft.enchant.power=Power
-minecraft.enchant.sweeping=Sweeping
-minecraft.enchant.unbreaking=Unbreaking
-minecraft.enchant.efficiency=Efficiency
-minecraft.enchant.punch=Punch
-minecraft.enchant.frostwalker=Frost Walker
-minecraft.enchant.fortune=Fortune
-minecraft.enchant.silktouch=Silk Touch
-hartshorn.exception=$4{0}
+minecraft.enchant.infinity=Loputtomuus
+minecraft.enchant.protection.projectile=Ammussuojaus
+minecraft.enchant.knockback=Raskas
+minecraft.enchant.protection.fire=Tulisuojaus
+minecraft.enchant.depthstrider=Vesivipellys
+minecraft.enchant.aquaaffinity=Vesimieltymys
+minecraft.enchant.featherfalling=Höyhenenkevyt
+minecraft.enchant.sealuck=Meren Onni
+minecraft.enchant.protection.blast=Räjähdyssuojaus
+minecraft.enchant.baneofarthopods=Niveljalkaisten Kirous
+minecraft.enchant.binding=Sitoutumisen Kirous
+minecraft.enchant.fireaspect=Liekehtivä
+minecraft.enchant.vanishing=Katoamisen Kirous
+minecraft.enchant.protection=Suojaus
+minecraft.enchant.lure=Viehe
+minecraft.enchant.mending=Paikkaus
+minecraft.enchant.respiration=Hengitys
+minecraft.enchant.smite=Sivallus
+minecraft.enchant.looting=Ryöstely
+minecraft.enchant.sharpness=Terävyys
+minecraft.enchant.thorns=Piikikäs
+minecraft.enchant.flame=Liekki
+minecraft.enchant.power=Voima
+minecraft.enchant.sweeping=Kiitävä Reuna
+minecraft.enchant.unbreaking=Hajoamaton
+minecraft.enchant.efficiency=Tehokkuus
+minecraft.enchant.punch=Isku
+minecraft.enchant.frostwalker=Pakkaskävelijä
+minecraft.enchant.fortune=Onni
+minecraft.enchant.silktouch=Silkkinen Kosketus
+selene.exception=$4{0}
 prefix=$3[] $1
-caught=$4An error occurred. $3{0}
-source.unknown=Unknown
-caught.reference.lost=$4Reference to object lost
-caught.failedbinding=$4Cannot apply to this type
-source.none=None
-oldplots.caught.calculation=$4Could not calculate plot location
-oldplots.list.hover=$2Teleport to $1{0}$2, $1{1}, {2}
+caught=$4Tapahtui virhe. $3{0}
+source.unknown=Tuntematon
+caught.reference.lost=$4Viittaus tunnisteeseen) kadotettu caught.failedbinding=$4Tätä esinettä ei voi käyttää tähän
+oldplots.caught.calculation=$4Plotin sijaintia ei voitu määrittää
+oldplots.list.hover=$2Teleporttaa kohteeseen $1{0}$2, $1{1}, {2}
 oldplots.list.single=$3 - $1{0}$2, $1{1}, {2}
-oldplots.caught.plot=$4No plot with that ID found
-oldplots.caught.worlds=$4Worlds are not stored as OldPlots
-oldplots.caught.player=$4No valid player provided
-oldplots.caught.location=$4No world location configured for '{0}'
-oldplots.list.title=$1OldPlots for $2{0}
-dave.suggestion.link.hover=$2Click to open $1{0}
-dave.trigger.notfound=$4No trigger with id '{0}' exists.
-dave.trigger.single.hover=$1Click to perform trigger
-dave.suggestion.link=Here's a useful link, $1{0}
-dave.unmute=$1Unmuted Dave
-dave.reload=$1Reloaded Dave without breaking stuff, whoo!
-dave.trigger.header=$1Triggers
+oldplots.caught.plot=$4Ei kyetty löytämään plottia tällä ID:llä
+oldplots.caught.worlds=$4Maailmoja ei säilytetä nimellä OldPlots
+oldplots.caught.player=$4Kelvollista käyttäjänimeä ei syötetty
+oldplots.caught.location=$4Ei sijaintia määritetty kohteelle '{0}'
+oldplots.list.title=$1Käyttäjän $2{0} omistamat plotit kohteessa OldPlots
+dave.suggestion.link.hover=$2Paina avataksesi $1{0}
+dave.trigger.notfound=$4Ei määritettyä laukaisinta ID:llä '{0}' .
+dave.trigger.single.hover=$1Paina suorittaaksesi laukaisin 
+dave.suggestion.link=Tässä on hyödyllinen linkki, $1{0}
+dave.unmute=$1Poistettiin Daven vaimennus
+dave.reload=$1Uudelleen ladattiin Dave hajottamatta mitään, Hurraa!
+dave.trigger.header=$1Laukaisimet
 dave.discord.format=**Dave** ≫ {0}
-dave.mute=$4Muted Dave, note that important triggers will always show
+dave.mute=$4Dave vaimennettu, huomaathan, että tärkeät laukaisimet näkyvät siitä huolimatta aina
 dave.trigger.single=$3 - $1{0}
-hartshorn.reload.single=$1Successfully reloaded '$2{0}$1'
-hartshorn.info.service.unknown=$4Could not find service with ID '{0}'
-i18n.lang.updated.other=$1The language preference for $2{0} $1has been switched to: $2{1}
-hartshorn.confirm.invalid.id=$4Could not confirm command: Invalid runner ID
-i18n.lang.updated=$1Your preferred language has been switched to: $2{0}
-hartshorn.confirm.invalid.other=$4Could not confirm command
-hartshorn.info.service.hover=$2Details for '$1{0}$2'
-hartshorn.confirm.invalid.source=$4This command can only be used by identifiable sources (players, console) matching the original source of the command
-hartshorn.info.parameter.missing=$4Missing value for argument '{0}'
-hartshorn.pagination.title=$1Hartshorn Server Info
-hartshorn.info.authors=$2Authors$3: $1{0}
-hartshorn.info.services=$2Services$3:
-hartshorn.info.header=$2Hartshorn $3($1Version$3: $1{0}$3)
-hartshorn.invalid.source=$4This command can only be used by players
-hartshorn.info.service.row=$3 - $1{0} $3- $2{1}
-hartshorn.reload.single.fail=$4Failed to reload '{0}'
-hartshorn.reload.all=$1Successfully reloaded all services
-hashtag.wrong_format=Pattern has to be formatted as #type[arg1][arg2][etc.]
-missing_args=Not enough arguments.
-missing_converter=Parameter of type {0} has no registered converter
-toolbinding.caught.duplicate=There is already a tool bound to this item
-toolbinding.caught.block=Tool cannot be bound to blocks
-toolbinding.caught.hand=Tool cannot be bound to hand
-worldmanagement.unloader.blacklist.failed=$2{0} $1could not be blacklisted, are you sure it exists?
-worldmanagement.unloader.blacklist.added=$2{0} $1was added to the blacklist and will not be unloaded
-playeractions.spectator.notallowed=$4You are not allowed to teleport while in spectator mode
-playeractions.plot.denied=$4You are denied from the plot you are teleporting to
-playeractions.plot.interact=$4You do not have permission to interact with entities here
-playeractions.plot.outside=$4You are outside a plot
-playeractions.rootworld=$4You are not permitted to move in this world
-discord.command.not.permitted=You are not permitted to use that command!
-discord.command.unknown=Sorry, I don't know what to do with that command!
-discord.command.caught=Sorry, I could not start that command. Please report this in our support channel.
-caught.command.missingargs=$4The command requires arguments
-confirm.message.hover=$1Confirm running command
-confirm.message=$1This command requires confirmation, click $2[here] $1to confirm
-playeractions.lang.notify=$1Hi there! We detected you prefer to see messages in {0}, if you would like our commands to send you messages in {0} click on this message to change your language preference.
-playeractions.lang.notify.hover=$1Click here to change your language preference to $2{0}
-settings.notifications=Receive notifications
-settings.notifications.description=Whether to receive server notifications, for example when you change your client-side language preferences.
-settings.language=Language
-settings.language.description=The language in which messages are displayed to you.
-yes=Yes
-no=No
-settings=$1Settings
+selene.reload.single=$1Onnistuneesti Uudelleenladattiin '$2{0}$1'
+selene.info.service.unknown=$4Could not find service with ID '{0}'
+i18n.lang.updated.other=$1Valittu kieli pelaajalle $2{0} $1on vaihdettu kieleksi: $2{1}
+selene.confirm.invalid.id=$4Ei voitu vahvistaa komentoa: Virheellinen ID
+i18n.lang.updated=$1Valitsemasi kieli vaihdettu kieleksi: $2{0}
+selene.confirm.invalid.other=$4Komentoa ei voitu vahvistaa
+selene.info.service.hover=$2Yksityiskohdat kohteelle '$1{0}$2'
+selene.confirm.invalid.source=$4Tämä komento on vain tunnistettavien lähteiden käytössä (pelaajat, konsoli) jotka vastaavat alkuperäisen komennon alkuperää
+selene.info.parameter.missing=$4Parametristä puuttuu arvo '{0}'
+selene.pagination.title=$1Selene Palvelin Info
+selene.info.authors=$2Tekijät$3: $1{0}
+selene.info.services=$2Services$3:
+selene.info.header=$2Selene $3($1Versio$3: $1{0}$3)
+selene.invalid.source=$4Tätä komentoa voivat käyttää vain pelaajat
+selene.info.service.row=$3 - $1{0} $3- $2{1}
+selene.reload.single.fail=$4Uudelleenlataus epäonnistui '{0}'
+selene.reload.all=$1Successfully reloaded all services
+hashtag.wrong_format=Komento on ilmaistava seuraavasti: #type[arg1][arg2][etc.]
+missing_args=Puuttuvia argumentteja.
+missing_converter=Parametriä muodossa {0} ei ole rekisteröity muunnettavaksi
+toolbinding.caught.duplicate=Tähän esineeseen on jo sidottu työkalu
+toolbinding.caught.block=Tätä työkalua ei voi sitoa palikoihin
+toolbinding.caught.hand=Tätä työkalua ei voi sitoa käteen
+worldmanagement.unloader.blacklist.failed=$1Maailmaa $2{0} $1ei löytynyt, oletko varma että se on olemassa?
+worldmanagement.unloader.blacklist.added=$2{0} $1pysyy nyt aktiivisena
+playeractions.spectator.notallowed=$4Teleporttaaminen katsojatilassa ei ole sallittua
+playeractions.plot.denied=$4Pääsysi plotille jolle yrität teleportata on evätty
+playeractions.plot.interact=$4Oikeutesi olla tekemisissä täällä olevien entiteettien kanssa on evätty
+playeractions.plot.outside=$4Et ole plotilla
+playeractions.rootworld=$4Oikeutesi liikkua tässä maailmassa on evätty
+discord.command.not.permitted=Oikeus käyttää tätä komentoa puuttuu!
+discord.command.unknown=Pahoittelut, en tiedä mitä tehdä tällä komennolla!
+discord.command.caught=Pahoittelut, en kyennyt suorittamaan tätä komentoa. Ilmoitathan tästä tukikanavallamme. 
+caught.command.missingargs=$4Komennosta puuttuu argumentteja
+confirm.message.hover=$1Vahvista
+confirm.message=$1Tämä komento tulee vahvistaa manuaalisesti, paina $2[here] $1suorittaaksesi tämä komento
+playeractions.lang.notify=$1Hei! Huomasimme että näet mieluiten viestisi kielellä {0}, jos haluat että lähetämme viestit sinulle suomeksi paina tätä viestiä.
+playeractions.lang.notify.hover=$1Paina tästä vaihtaaksesi mieleiseksi kieleksesi $2{0}
+settings.notifications=Vastaanota ilmoituksia
+settings.notifications.description=Vastaanota ilmoituksia palvelimelta esimerkiksi muuttaessasi paikallisasetuksiasi.
+settings.language=Kieli
+settings.language.description=Kieli jolla viestit näytetään sinulle. 
+yes=Kyllä
+no=Ei
+settings=$1Asetukset
+
