#289 Fix i18n resource target

--- a/hartshorn-i18n/src/main/resources/hartshorn/translations_fi.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/translations_fi.properties
@@ -45,7 +45,7 @@ minecraft.enchant.punch=Isku
 minecraft.enchant.frostwalker=Pakkaskävelijä
 minecraft.enchant.fortune=Onni
 minecraft.enchant.silktouch=Silkkinen Kosketus
-selene.exception=$4{0}
+hartshorn.exception=$4{0}
 prefix=$3[] $1
 caught=$4Tapahtui virhe. $3{0}
 source.unknown=Tuntematon
@@ -68,23 +68,23 @@ dave.trigger.header=$1Laukaisimet
 dave.discord.format=**Dave** ≫ {0}
 dave.mute=$4Dave vaimennettu, huomaathan, että tärkeät laukaisimet näkyvät siitä huolimatta aina
 dave.trigger.single=$3 - $1{0}
-selene.reload.single=$1Onnistuneesti Uudelleenladattiin '$2{0}$1'
-selene.info.service.unknown=$4Could not find service with ID '{0}'
+hartshorn.reload.single=$1Onnistuneesti Uudelleenladattiin '$2{0}$1'
+hartshorn.info.service.unknown=$4Could not find service with ID '{0}'
 i18n.lang.updated.other=$1Valittu kieli pelaajalle $2{0} $1on vaihdettu kieleksi: $2{1}
-selene.confirm.invalid.id=$4Ei voitu vahvistaa komentoa: Virheellinen ID
+hartshorn.confirm.invalid.id=$4Ei voitu vahvistaa komentoa: Virheellinen ID
 i18n.lang.updated=$1Valitsemasi kieli vaihdettu kieleksi: $2{0}
-selene.confirm.invalid.other=$4Komentoa ei voitu vahvistaa
-selene.info.service.hover=$2Yksityiskohdat kohteelle '$1{0}$2'
-selene.confirm.invalid.source=$4Tämä komento on vain tunnistettavien lähteiden käytössä (pelaajat, konsoli) jotka vastaavat alkuperäisen komennon alkuperää
-selene.info.parameter.missing=$4Parametristä puuttuu arvo '{0}'
-selene.pagination.title=$1Selene Palvelin Info
-selene.info.authors=$2Tekijät$3: $1{0}
-selene.info.services=$2Services$3:
-selene.info.header=$2Selene $3($1Versio$3: $1{0}$3)
-selene.invalid.source=$4Tätä komentoa voivat käyttää vain pelaajat
-selene.info.service.row=$3 - $1{0} $3- $2{1}
-selene.reload.single.fail=$4Uudelleenlataus epäonnistui '{0}'
-selene.reload.all=$1Successfully reloaded all services
+hartshorn.confirm.invalid.other=$4Komentoa ei voitu vahvistaa
+hartshorn.info.service.hover=$2Yksityiskohdat kohteelle '$1{0}$2'
+hartshorn.confirm.invalid.source=$4Tämä komento on vain tunnistettavien lähteiden käytössä (pelaajat, konsoli) jotka vastaavat alkuperäisen komennon alkuperää
+hartshorn.info.parameter.missing=$4Parametristä puuttuu arvo '{0}'
+hartshorn.pagination.title=$1Hartshorn Palvelin Info
+hartshorn.info.authors=$2Tekijät$3: $1{0}
+hartshorn.info.services=$2Services$3:
+hartshorn.info.header=$2Hartshorn $3($1Versio$3: $1{0}$3)
+hartshorn.invalid.source=$4Tätä komentoa voivat käyttää vain pelaajat
+hartshorn.info.service.row=$3 - $1{0} $3- $2{1}
+hartshorn.reload.single.fail=$4Uudelleenlataus epäonnistui '{0}'
+hartshorn.reload.all=$1Successfully reloaded all services
 hashtag.wrong_format=Komento on ilmaistava seuraavasti: #type[arg1][arg2][etc.]
 missing_args=Puuttuvia argumentteja.
 missing_converter=Parametriä muodossa {0} ei ole rekisteröity muunnettavaksi
