Update French translations

--- a/hartshorn-i18n/src/main/resources/hartshorn/translations_fr.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/translations_fr.properties
@@ -97,12 +97,12 @@ discord.command.unknown=Désolé, je ne sais que faire de cette commande
 caught.command.missingargs=$4Cette commande nécessite des arguments
 confirm.message.hover=$1Confirmer l'exécution de cette commande
 confirm.message=$1Cette commande nécessite une confirmation, cliquez $2[ici] $1pour confirmer
-playeractions.lang.notify=$1Hi there! We detected you prefer to see messages in {0}, if you would like our commands to send you messages in {0} click on this message to change your language preference.
-playeractions.lang.notify.hover=$1Click here to change your language preference to $2{0}
-settings.notifications=Receive notifications
-settings.notifications.description=Whether to receive server notifications, for example when you change your client-side language preferences.
-settings.language=Language
-settings.language.description=The language in which messages are displayed to you.
-yes=Yes
-no=No
-settings=$1Settings
+playeractions.lang.notify=$1Salut! Nous avons détecté que vous préférez voir les messages en  {0}, si vous souhaitez que nos commandes vous envoient des messages en{0}cliquez sur ce message pour changer la langue d'affichage. 
+playeractions.lang.notify.hover=$1Cliquez ici pour changer votre préférence de langue en  $2{0}
+settings.notifications=Recevoir des notifications 
+settings.notifications.description=Si vous souhaitez recevoir les notifications du serveur, par exemple lorsque vous modifiez vos préférences de langue côté client. 
+settings.language=Langue
+settings.language.description=La langue dans laquelle les messages vous sont affichés. 
+yes=Oui
+no=Non
+settings=$1Paramètres
